# Tungsten

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.wscene  idea.txt  premake5.lua  string_view
SandBox/: SandBox.wproj
SandBox/Intermidiate/: CMakeLists.txt
SandBox/Intermidiate/TungstenReflect/: CMakeLists.txt
SandBox/Intermidiate/TungstenRuntime/: CMakeLists.txt
SandBox/Intermidiate/TungstenRuntime/src/: main.cpp
SandBox/SandBox/: CMakeLists.txt  SandBox.wproj
SandBox/SandBox/Assets/Scenes/: main.wscene  tree.wscene
SandBox/SandBox/Scenes/: main.wscene
SandBox/SandBox/include/SandBox/: SandBox.hpp
SandBox/SandBox/src/: SandBox.cpp  SandBox.hpp  main.cpp
SandBox/src/: main.cpp
SandBoxBuild/data/: data0.wdat
Sandbox/: Sandbox.wproj
Sandbox/Assets/Scenes/: main.wscene
TungstenBuild/: CMakeLists.txt
TungstenBuild/TungstenBuild/: CMakeLists.txt
TungstenBuild/TungstenBuild/include/TungstenBuild/: Config.hpp  TungstenBuild.hpp
TungstenBuild/TungstenBuild/res/tungstenbuild_data/: componentDeclarations.hpp.in  componentDeclorations.hpp.in  componentIncludes.hpp.in  projectDefines.hpp.in  wRuntimeWorkspace.CMakeLists.txt.in
TungstenBuild/TungstenBuild/src/: TungstenBuild.cpp
TungstenBuild/TungstenBuildStandalone/: CMakeLists.txt
TungstenBuild/TungstenBuildStandalone/src/: main.cpp
TungstenCore/: CMakeLists.txt
TungstenCore/include/: TungstenCore.hpp
TungstenCore/include/TungstenCore/: ComponentList.hpp  ComponentManager.hpp  ComponentSettings.hpp  ComponentSetup.hpp  ComponentSystem.hpp  TungstenCore.hpp
TungstenCore/src/: Application.cpp  ComponentSetup.cpp  ComponentSystem.cpp  TungstenCore.cpp  TungstenCore.hpp  wCorePCH.hpp
TungstenCore/src/TungstenCore/: Application.cpp  Application.hpp  Logger.cpp  Logger.hpp  Scene.cpp  Scene.hpp  ansi.hpp  core.hpp  logging.hpp  macros.hpp  wCorePCH.hpp
TungstenEditor/src/: main.cpp
TungstenForge/: CMakeLists.txt
TungstenForge/include/: TungstenForge.hpp
TungstenForge/include/TungstenForge/: TungstenForge.hpp
TungstenForge/res/Templates/: TungstenRuntimeCMakeLists.txt
TungstenForge/src/: TungstenForge.cpp  main.cpp
TungstenForgeCLI/: CMakeLists.txt
TungstenForgeCLI/src/: main.cpp
TungstenRuntime/: CMakeLists.txt
TungstenRuntime/src/: main.cpp
TungstenUtils/: CMakeLists.txt
TungstenUtils/include/: TungstenLogger.hpp  TungstenUtils.hpp
TungstenUtils/include/TungstenUtils/: SlotList.hpp  TungstenLogger.hpp
TungstenUtils/src/: TungstenLogger.cpp  wUtilsPCH.cpp  wUtilsPCH.hpp
TungstenUtils/tests/: CMakeLists.txt  TestSlotList.cpp
cmake/: TungstenVersion.cmake
libTungstenForge/src/: ErrorList.cpp  ErrorList.hpp  SceneData.cpp  SceneData.hpp  SerializationUtility.cpp  SerializationUtility.hpp  TungsrenForge.hpp  TungstenForge.cpp  TungstenForge.hpp  wForgePCH.cpp  wForgePCH.hpp
libTungstenForge/src/utils/: pathUtility.cpp  pathUtility.hpp  stringUtility.cpp  stringUtility.hpp
